to debug the query interface of the IDirect3D9*

--- a/MultiAnimation/MultiAnimation_2005.vcproj
+++ b/MultiAnimation/MultiAnimation_2005.vcproj
@@ -44,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\Common;&quot;C:\program Files\microsoft directX SDK (April 2006)\Include&quot;"
+				AdditionalIncludeDirectories="..\Common;&quot;C:\program Files\microsoft directX SDK (April 2006)\Include&quot;;&quot;C:\Program Files\Microsoft Platform SDK\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
@@ -69,7 +69,7 @@
 				AdditionalOptions="/IGNORE:4089"
 				AdditionalDependencies="dxerr.lib dxguid.lib d3dx9d.lib d3d9.lib comctl32.lib winmm.lib dsound.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft DirectX SDK (April 2006)\Lib\x86&quot;"
+				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft DirectX SDK (April 2006)\Lib\x86&quot;;&quot;C:\Program Files\Microsoft Platform SDK\Lib&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/MultiAnimation.pdb"
 				SubSystem="2"
@@ -212,7 +212,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\Common;&quot;C:\program Files\microsoft directX SDK (April 2006)\Include&quot;"
+				AdditionalIncludeDirectories="..\Common;&quot;C:\program Files\microsoft directX SDK (April 2006)\Include&quot;;&quot;C:\Program Files\Microsoft Platform SDK\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				StringPooling="true"
 				ExceptionHandling="1"
@@ -239,7 +239,7 @@
 				AdditionalDependencies="dxerr.lib dxguid.lib d3dx9.lib d3d9.lib comctl32.lib winmm.lib dsound.lib"
 				OutputFile="$(OutDir)/MultiAnimation.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft DirectX SDK (April 2006)\Lib\x86&quot;"
+				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft DirectX SDK (April 2006)\Lib\x86&quot;;&quot;C:\Program Files\Microsoft Platform SDK\Lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
